# analysis-api-1

./: .env.example  .gitignore  Cargo.toml  README.md  openapi.yaml
docs/: 配置信息.md
examples/: README.md  email_query.json  email_response.json  intelligence_query.json  intelligence_response.json  statistics_response.json  system_time_response.json  timeline_query.json  timeline_response.json  trend_query.json  trend_response.json
src/: config.rs  lib.rs  main.rs  server.rs  telemetry.rs
src/db/: clickhouse.rs  mod.rs  models.rs  repository.rs
src/models/: mod.rs
src/models/api/: email.rs  intelligence.rs  intelligence_action.rs  mod.rs  statistics.rs  system.rs  timeline.rs  trend.rs
src/models/domain/: email.rs  intelligence.rs  intelligence_action.rs  mod.rs  statistics.rs  system.rs  timeline.rs  trend.rs
src/routes/: email.rs  hello.rs  intelligence.rs  intelligence_action.rs  mod.rs  router.rs  statistics.rs  system.rs  timeline.rs  trend.rs
src/services/: email_service.rs  intelligence_action_service.rs  intelligence_service.rs  mod.rs  statistics_service.rs  system_service.rs  timeline_service.rs  trend_service.rs
src/sql/: alert_queries.rs  mod.rs
