[package]
name = "analysis-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["trace"] }

# 添加tracing相关依赖
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"

# 添加OpenTelemetry相关依赖
opentelemetry = { version = "0.21", features = ["trace"] }
# 同时支持HTTP和gRPC协议
opentelemetry-otlp = { version = "0.14", features = ["trace", "http-proto", "reqwest-client", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tonic = "0.10"

# 添加ClickHouse相关依赖
clickhouse = { version = "0.13.2", features = ["uuid", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"

# 添加dotenv支持
dotenv = "0.15"

# 添加URL编码支持
urlencoding = "2.1"
